# processa-midias

./: .gitignore  README.md  cli.py  compile_adapter.bat  manual_login.py  pyproject.toml
src/database/: connection.py  repository.py
src/legacy_adapter/: App.config.example  LegacyAdapter.csproj  Program.cs  compile_adapter.bat  run_adapter.py
src/scraper/: instagram_reels_helper.py
src/scraper/core/: browser.py
src/scraper/spiders/: facebook.py  instagram.py  twitter.py
src/services/: processing_service.py
src/utils/: logger.py
